Update email service.

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,7 +3,7 @@
 {% block title %}Enter New Password{% endblock title %}
 
 {% block content %}
-    {% if validlink %}
+    {% if form %}
         <h1>Set a new password!</h1>
 
         <form method="POST">
