--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -8,11 +8,12 @@
         <p>by {{ object.author }} | {{ object.date }}</p>
         <p>{{ object.body }}</p>
     </div>
-
+    {% if article.author == user %}
     <p>
         <a href="{% url 'article_edit' article.pk %}">Edit</a>
         <a href="{% url 'article_delete' article.pk %}">Delete</a>
     </p>
+    {% endif %}
 
     <p>Back to <a href="{% url 'article_list' %}">All Articles</a></p>
 {% endblock content %}
