--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -8,6 +8,14 @@
         <p>by {{ object.author }} | {{ object.date }}</p>
         <p>{{ object.body }}</p>
     </div>
+
+    <hr>
+    <h4>Comments</h4>
+    {% for comment in article.comment_set.all %}
+        <p>{{ comment.author }} &middot; {{ comment }}</p>
+    {% endfor %}
+    <hr>
+
     {% if article.author == user %}
     <p>
         <a href="{% url 'article_edit' article.pk %}">Edit</a>
