--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -14,14 +14,24 @@
             </span>
         </div>
         <div class="card-body">
-            {{ article.body }}
+            <p>{{ article.body }}</p>
+            {% if article.author == user %}
+                <div class="card-footer text-center text-muted">
+                    <a href="{% url 'article_edit' article.pk %}">Edit</a> | 
+                    <a href="{% url 'article_delete' article.pk %}">Delete</a>
+                </div>
+            {% endif %}
         </div>
-        {% if article.author == user %}
         <div class="card-footer text-center text-muted">
-            <a href="{% url 'article_edit' article.pk %}">Edit</a> | 
-            <a href="{% url 'article_delete' article.pk %}">Delete</a>
+            {% for comment in article.comment_set.all %}
+                <p>
+                    <span class="font-weight-bold">
+                        {{ comment.author }} &middot;
+                    </span>
+                    {{ comment }}
+                </p>
+            {% endfor %}
         </div>
-        {% endif %}
     </div>
     <br>
     {% endfor %}
