Add ability to add comments, Update home page functionality, Add access to admin

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,4 +11,5 @@
         <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'signup' %}">Signup</a>
     {% endif %}
+    <a href="{% url 'home' %}">View All Articles</a>
 {% endblock content %}
