--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Article{% endblock title %}
 
@@ -14,6 +15,14 @@
     {% for comment in article.comment_set.all %}
         <p>{{ comment.author }} &middot; {{ comment }}</p>
     {% endfor %}
+    <hr>
+
+    <h4>Add a comment</h4>
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{ form|crispy}}
+        <button class="btn btn-success ml-2" type="submit">Save</button>
+    </form>
     <hr>
 
     {% if article.author == user %}
