--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,13 @@
                                 {{ user.username }}
                                 </a>
                                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                                    {% if user.is_staff %}
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'admin:index' %}">
+                                            Admin
+                                        </a>
+                                    </li>
+                                    {% endif %}
                                     <li>
                                         <a class="dropdown-item" href="{% url 'password_change' %}">
                                             Change password
